Tooltip and Window Splitter Patterns: Revise notes with links to issues
Revise note language to better reflect the status of the patterns in the publication.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2528,9 +2528,9 @@
     <section class="widget" id="tooltip">
       <h3>Tooltip Widget</h3>
       <p>
-        Work on this design pattern is in progress and tracked by
+        <strong>NOTE:</strong> This design pattern is work in progress; it does not yet have task force consensus.
+        Progress and discussions are captured in 
         <a href="https://github.com/w3c/aria-practices/issues/128">issue 128.</a>
-        Please provide feedback in that issue.
       </p>
       <p>
         A tooltip is a popup that displays information related to an element when the element receives keyboard focus or the mouse hovers over it.
@@ -2760,7 +2760,9 @@
     <section class="widget" id="windowsplitter">
       <h3>Window Splitter</h3>
       <p>
-        Work is in progress on this design pattern and is tracked by
+        <strong>NOTE:</strong> ARIA 1.1 introduced changes to the separator role so it behaves as a widget when focusable.
+        While this pattern has been revised to match the ARIA 1.1 specification, the task force will not complete its review until a functional example that matches the ARIA 1.1 specification is complete.
+        Progress on this pattern is tracked by
         <a href="https://github.com/w3c/aria-practices/issues/129">issue 129.</a>
       </p>
       <p>
