Menubar Pattern and Examples: Remove note about aria-expanded not validating
For issue #447, reversed changes made in commits 310801c, 1c2446b, and dc4e6ef.
There are no longer notes stating to ignore validation errors.
Based on comment by @sideshowbarker in issue #447, such errors will soon no longer be generated by the validator.

--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -439,9 +439,7 @@
             <td>
               <code>li</code>
             </td>
-            <td>
-              Indicates the submenu is open. (<strong>See note below.</strong>)
-            </td>
+            <td>Indicates the submenu is open.</td>
           </tr>
           <tr>
             <td></td>
@@ -451,9 +449,7 @@
             <td>
               <code>li</code>
             </td>
-            <td>
-              Indicates the submenu is closed. (<strong>See note below.</strong>)
-            </td>
+            <td>Indicates the submenu is closed.</td>
           </tr>
         </tbody>
       </table>
@@ -709,15 +705,6 @@
         </tr>
       </tbody>
     </table>
-    <h3>Note</h3>
-    <p>
-      Currently, using aria-expanded on elements with role menuitem triggers HTML validation errors because the ARIA specification does not yet support doing so.
-      The ARIA working group plans to resolve this issue in the next version of the specification.
-      Until a version of ARIA that resolves
-      <a href="https://github.com/w3c/aria/issues/454">the issue</a>
-      becomes a W3C recommendation, it is safe to ignore these validation errors.
-      Alternatively, since only a few browser and assistive technology combinations exploit this feature of the pattern, it can be omitted from implementations.
-    </p>
   </section>
 
   <section>
