--- a/examples/radio/radio-1/radio-1.html
+++ b/examples/radio/radio-1/radio-1.html
@@ -37,8 +37,9 @@
       </ul>
 
 
-      <section aria-labelledby="example_label">
-        <h2 id="example_label">Example</h2>
+      <section>
+        <h2 id="ex_label">Example</h2>
+        <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
 
         <div id="ex1">
           <div  role="radiogroup" aria-labelledby="group_label_1" id="rg1">
@@ -77,20 +78,19 @@
             rg2.init();
           </script>
         </div>
+        <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
       </section>
 
-      <section aria-labelledby="information_label">
-        <h2 id="information_label">Radio Group Widget Implementation Information</h2>
-
-        <h3>Implementation Notes</h3>
+      <section>
+        <h2>Accessibility Features</h2>
         <ul>
           <li>Uses CSS attribute selectors for synchronizing <code>aria-checked</code> state with the visual state indicator.</li>
           <li>Uses CSS <code>:hover</code> and <code>:focus</code> pseudo-selectors for styling visual keyboard focus and hover.</li>
         </ul>
+      </section>
 
-
-        <h3 id="kbd_label">Keyboard Support</h3>
-
+      <section>
+        <h2 id="kbd_label">Keyboard Support</h2>
         <table aria-labelledby="kbd_label" class="def">
           <thead>
             <tr>
@@ -103,8 +103,8 @@
               <th><kbd>Tab</kbd></th>
               <td>
                 <ul>
-                  <li>Moves keyboard focus to the checked <code>radio</code> button in a <code>radiogroup</code>.</li>
-                  <li>If no <code>radio</code> button is checked, focus moves to the first <code>radio</code> button in the group.</li>
+                  <li>Moves focus to the checked <code>radio</code> button in the <code>radiogroup</code>.</li>
+                  <li>If a <code>radio</code> button is not checked, focus moves to the first <code>radio</code> button in the group.</li>
                 </ul>
               </td>
             </tr>
@@ -112,7 +112,19 @@
               <th><kbd>Space</kbd></th>
               <td>
                 <ul>
-                  <li>If the <code>radio</code> button with focus is unchecked, its state will be changed to <code>checked</code>.</li>
+                  <li>If the <code>radio</code> button with focus is not checked, changes the state to <code>checked</code>.</li>
+                  <li>Otherwise, does nothing.</li>
+                  <li>Note: The state where a radio is not checked only occurs on page load.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <th><kbd>Right arrow</kbd></th>
+              <td>
+                <ul>
+                  <li>Moves focus to and checks the next <code>radio</code> button in the group.</li>
+                  <li>If focus is on the last <code>radio</code> button, moves focus to the first <code>radio</code> button.</li>
+                  <li>The state of the previously checked radio button is changed to unchecked.</li>
                 </ul>
               </td>
             </tr>
@@ -120,8 +132,19 @@
               <th><kbd>Down arrow</kbd></th>
               <td>
                 <ul>
-                  <li>Moves focus to next <code>radio</code> button in the group.</li>
-                  <li>If focus is on the last <code>radio</code> button in the group, move focus to the first <code>radio</code> button.</li>
+                  <li>Moves focus to and checks the next <code>radio</code> button in the group.</li>
+                  <li>If focus is on the last <code>radio</code> button, moves focus to the first <code>radio</code> button.</li>
+                  <li>The state of the previously checked radio button is changed to unchecked.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <th><kbd>Left arrow</kbd></th>
+              <td>
+                <ul>
+                  <li>Moves focus to and checks the previous <code>radio</code> button in the group.</li>
+                  <li>If focus is on the first <code>radio</code> button, moves focus to and checks the last <code>radio</code> button.</li>
+                  <li>The state of the previously checked radio button is changed to unchecked.</li>
                 </ul>
               </td>
             </tr>
@@ -129,16 +152,18 @@
               <th><kbd>Up arrow</kbd></th>
               <td>
                 <ul>
-                  <li>Moves focus to previous <code>radio</code> button in the group.</li>
-                  <li>If focus is on the first <code>radio</code> button in the group, move focus to the last <code>radio</code> button.</li>
+                  <li>Moves focus to and checks the previous <code>radio</code> button in the group.</li>
+                  <li>If focus is on the first <code>radio</code> button, moves focus to and checks the last <code>radio</code> button.</li>
+                  <li>The state of the previously checked radio button is changed to unchecked.</li>
                 </ul>
               </td>
             </tr>
           </tbody>
         </table>
+      </section>
 
-        <h3 id="rps_label">ARIA Roles, Properties and States</h3>
-
+<section>
+        <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
         <table aria-labelledby="rps_label" class="data attributes">
           <thead>
             <tr>
@@ -155,10 +180,8 @@
               <td><code>div</code></td>
               <td>
                 <ul>
-                  <li>The <code>role="radiogroup"</code> attribute identifies the <code>div</code> element as a container for a group of <code>radio</code> buttons.</li>
-                  <li>The descendent <code>radio</code> buttons are considered part of the group.</li>
-                  <li>The accessible name comes from the <code>aria-labelledby</code> attribute, which points to the element that contains the label text.</li>
-                  <li>The <code>radiogroup</code> widget does not need a <code>tabindex</code> value, since the <code>ul[role"radiogroup"]</code> element never receives keyboard focus.</li>
+                  <li>Identifies the <code>div</code> element as a container for a group of <code>radio</code> buttons.</li>
+                  <li>Is not focusable because focus is managed using a roving tabindex strategy as described below.</li>
                 </ul>
               </td>
             </tr>
@@ -166,11 +189,7 @@
               <td></td>
               <th scope="row"><code>aria-labelledby="[IDREF]"</code></th>
               <td><code>div</code></td>
-              <td>
-                <ul>
-                  <li>The <code>aria-labelledby</code> attribute points to the element that contains the test for defining an accessible name (e.g. label) for the group of <code>radio</code> buttons.</li>
-                </ul>
-              </td>
+              <td>Refers to the element that contains the label of the radio group.</td>
             </tr>
             <tr>
               <th scope="row"><code>radio</code></th>
@@ -178,10 +197,8 @@
               <td><code>div</code></td>
               <td>
                 <ul>
-                  <li>The <code>role="radio"</code> attribute identifies the <code>div</code> element as an ARIA <code>radio</code> button.</li>
-                  <li>The accessible name comes from the child text content of the <code>div</code> element.</li>
-                  <li>The <code>radio</code> widget has a managed <code>tabindex</code> value, one radio button must have <code>tabindex="0"</code> and the rest of the radio buttons in the group <code>tabindex="-1"</code>.</li>
-                  <li>See <a href="../../../#kbd_roving_tabindex">roving tabindex</a> for more information</li>
+                  <li>Identifies the <code>div</code> element as an ARIA <code>radio</code> button.</li>
+                  <li>The accessible name is computed from the child text content of the <code>div</code> element.</li>
                 </ul>
               </td>
             </tr>
@@ -191,8 +208,9 @@
               <td><code>div</code></td>
               <td>
                 <ul>
-                  <li>All <code>radio</code> buttons in a group that are unchecked, except for the first <code>radio</code> button in the case when no <code>radio</code> buttons are checked.</li>
-                  <li>See <a href="../../../#kbd_roving_tabindex">roving tabindex</a> for more information</li>
+                  <li>Makes the element focusable but not part of the page <kbd>Tab</kbd> sequence.</li>
+                  <li>Applied to all radio buttons contained in the radio group except for one that is included in the page <kbd>Tab</kbd> sequence.</li>
+                  <li>This approach to managing focus is described in the section on <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
                 </ul>
               </td>
             </tr>
@@ -202,8 +220,11 @@
               <td><code>div</code></td>
               <td>
                 <ul>
-                  <li>The <code>radio</code> button that is checked or, if no <code>radio</code> button is checked, the first <code>radio</code> button in the radio group.</li>
-                  <li>See <a href="../../../#kbd_roving_tabindex">roving tabindex</a> for more information</li>
+                  <li>Makes the radio button focusable and includes it in the page <kbd>Tab</kbd> sequence.</li>
+                  <li>Set on only one radio in the radio group.</li>
+                  <li>On page load, is set on the first radio button in the radio group.</li>
+                  <li>Moves with focus inside the radio group so the most recently focused radio button is included in the page <kbd>Tab</kbd> sequence.</li>
+                  <li>This approach to managing focus is described in the section on <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
                 </ul>
               </td>
             </tr>
@@ -213,9 +234,9 @@
               <td><code>div</code></td>
               <td>
                 <ul>
-                  <li>Indentifies <code>radio</code> buttons which are not checked.</li>
-                  <li>CSS attribute selectors (e.g. <code>[aria-checked="false"]</code>) are used to synchornize the visual states with the value of the <code>aria-checked</code> attribute.</li>
-                  <li>The CSS <code>::before</code> pseudo-class is used to indcate visual state of unchecked radio buttons to support high contrast settings in operating systems and browsers.</li>
+                  <li>Identifies <code>radio</code> buttons which are not checked.</li>
+                  <li>CSS attribute selectors (e.g. <code>[aria-checked="false"]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
+                  <li>The CSS <code>::before</code> pseudo-class is used to indicate visual state of unchecked radio buttons to support high contrast settings in operating systems and browsers.</li>
                 </ul>
               </td>
             </tr>
@@ -225,15 +246,14 @@
               <td><code>div</code></td>
               <td>
                 <ul>
-                  <li>Indentifies the <code>radio</code> button which is checked.</li>
-                  <li>CSS attribute selectors (e.g. <code>[aria-checked="true"]</code>) are used to synchornize the visual states with the value of the <code>aria-checked</code> attribute.</li>
-                  <li>The CSS <code>::before</code> pseudo-class is used to indcate visual state of checked radio buttons to support high contrast settings in operating systems and browsers.</li>
+                  <li>Identifies the <code>radio</code> button which is checked.</li>
+                  <li>CSS attribute selectors (e.g. <code>[aria-checked="true"]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
+                  <li>The CSS <code>::before</code> pseudo-class is used to indicate visual state of checked radio buttons to support high contrast settings in operating systems and browsers.</li>
                 </ul>
               </td>
             </tr>
           </tbody>
         </table>
-
       </section>
 
       <section>
@@ -250,11 +270,6 @@
         <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
         <pre><code id="sc1"></code></pre>
         <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
-        <!--
-          The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
-          It renders the HTML in the preceding div with ID 'sc1'.
-          If you change the ID of either the 'ex1' div or the 'sc1' div, be sure to update the sourceCode.add function parameters.
-        -->
         <script>
           sourceCode.add('sc1', 'ex1');
           sourceCode.make();
