Radio Group Examples: Editorial Revisions
Modified aria-practices.html:
In the radio group pattern, modified link text for example links to match example page titles.

Modified examples/radio/radio-1/radio-1.html:
* Fix page title
* Fix link text for link to design pattern.
* Revised description paragraph.
* Fix link text for link to other radio example

Modified examples/radio/radio-2/radio-2.html:
* Fix page title
* Fix link text for design pattern
* Fix link text for link to other radio example
* Remove extra landmark regions
* Fix section and heading structure to be consistent with template
* Add documentation for left/right arrow keys
* Editorial revisions to keyboard table
* Add paragraph about activedescendant before keyboard table
* Editorial revisions to roles, states, and properties

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1999,15 +1999,8 @@
       <section class="notoc">
         <h4>Examples</h4>
         <ul>
-          <li>
-            <a href="examples/radio/radio-1/radio-1.html">Radio group example using roving
-              tabindex.</a>
-          </li>
-          <li>
-            <a href="examples/radio/radio-2/radio-2.html">
-              Radio group example using managed focus with <code>aria-activedescendant</code>.
-            </a>
-          </li>
+          <li><a href="examples/radio/radio-1/radio-1.html">Radio Group Example Using Roving tabindex</a></li>
+          <li><a href="examples/radio/radio-2/radio-2.html">Radio Group Example Using aria-activedescendant</a></li>
         </ul>
       </section>
 
