--- a/examples/radio/radio-1/radio-1.html
+++ b/examples/radio/radio-1/radio-1.html
@@ -2,7 +2,7 @@
   <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Radio Button Example | WAI-ARIA Authoring Practices 1.1</title>
+    <title>Radio Group Example Using Roving tabindex | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -11,6 +11,7 @@
     <script src="../../js/highlight.pack.js"></script>
     <script src="../../js/app.js"></script>
 
+<!--  CSS and Javascript used by this example -->
     <link rel="stylesheet" href="../css/radio.css">
     <script src="js/radioGroup.js" type="text/javascript"></script>
     <script src="js/radioButton.js" type="text/javascript"></script>
@@ -25,22 +26,19 @@
       </ul>
     </nav>  
     <main role="main">
-      <h1>Radio Group Example</h1>
-
-      <p>This example implements the features of the <a href="../../../#radiobutton">Radio Button Design Pattern</a> for selecting a pizza crust and delivery method.</p>
-
+      <h1>Radio Group Example Using Roving tabindex</h1>
+      <p>
+        This example implements the features of the <a href="../../../#radiobutton">Radio Group Design Pattern</a>
+        for two radio groups -- one for choosing a pizza crust and another for choosing a delivery method.
+        This implementation uses a roving tabindex for managing focus within the radio group.
+      </p>
       <p>Similar examples include: </p>
-      
       <ul>
-        <li><a href="../radio-2/radio-2.html">Radio Button Example (aria-activedescendant)</a>: Radio button group using <code>aria-activedescendant</code> for managing keyboard focus.</li>
-        <!--  list other examples that implement the same design pattern. -->
+        <li><a href="../radio-2/radio-2.html">Radio Group Example Using aria-activedescendant</a>: Radio button group that uses <code>aria-activedescendant</code> for managing keyboard focus.</li>
       </ul>
-
-
       <section>
         <h2 id="ex_label">Example</h2>
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
-
         <div id="ex1">
           <div  role="radiogroup" aria-labelledby="group_label_1" id="rg1">
             <h3 id="group_label_1">Pizza Crust</h3>
