--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -193,7 +193,7 @@
             As a new property, screen reader users may experience varying degrees of support for it.
           </li>
           <li>
-            Applying the <code>aria-modal</code> property to the <code>dialog</code> element 
+            Applying the <code>aria-modal</code> property to the <code>dialog</code> element
             replaces the technique of using <code>aria-hidden</code> on the background for informing assistive technologies that content outside a dialog is inert.
           </li>
           <li>
@@ -232,7 +232,7 @@
       <a href="../../#dialog_modal">Modal Dialog Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
   </div>
-  <div id="dialog_layer">
+  <div class="dialogs">
     <div role="dialog" id="dialog1" aria-labelledby="dialog1_label" aria-modal="true" class="hidden">
       <h2 id="dialog1_label">Add Delivery Address</h2>
       <div class="dialog_form">
@@ -280,8 +280,7 @@
 
     <!--  Second modal to open on top of the first modal  -->
     <div id="dialog2" role="dialog" aria-labelledby="dialog2_label"
-      aria-describedby="dialog2_desc" aria-modal="true" class="hidden"
-    >
+      aria-describedby="dialog2_desc" aria-modal="true" class="hidden">
       <h2 id="dialog2_label">Verification Result</h2>
       <div id="dialog2_desc" class="dialog_desc">
         <p tabindex="-1" id="dialog2_para1">This is just a demonstration. If it were a real application, it would
@@ -341,8 +340,7 @@
 
     <!--  Dialog that replaces dialog 1.  -->
     <div id="dialog3" role="dialog" aria-labelledby="dialog3_label"
-      aria-describedby="dialog3_desc" aria-modal="true" class="hidden"
-    >
+      aria-describedby="dialog3_desc" aria-modal="true" class="hidden">
       <h2 id="dialog3_label">Address Added</h2>
       <p id="dialog3_desc" class="dialog_desc">
         The address you provided has been added to your list of delivery addresses. It is ready
@@ -356,8 +354,7 @@
 
     <div id="dialog4" role="dialog" aria-labelledby="dialog4_label"
       aria-describedby="dialog4_desc" class="hidden"
-      aria-modal="true"
-    >
+      aria-modal="true">
       <h2 id="dialog4_label">End of the Road!</h2>
       <p id="dialog4_desc" class="dialog_desc">
         You activated a fake link or button that goes nowhere!
