update of acknowledgments

--- a/common/acknowledgements.html
+++ b/common/acknowledgements.html
@@ -5,46 +5,39 @@
 		<h4>Participants active in the ARIA WG at the time of publication</h4>
 		<ul>
 			<li>Ann Abbott (IBM Corporation)</li>
-			<li>Michiel Bijl (The Paciello Group)</li>
+			<li>Irfan Ali (Educational Testing Service)</li>
+			<li>Amelia Bellamy-Royds (Invited Expert)</li>
+			<li>Michiel Bijl (Invited Expert)</li>
 			<li>Christy Blew (University of Illinois at Urbana-Champaign)</li>
-      <li>Teresa Boers (IBM Corporation)</li>
-			<li>David Bolter (Mozilla Foundation) </li>
+			<li>David Bolter (Mozilla Foundation)</li>
+			<li>Bogdan Brinza (Microsoft Corporation)</li>
 			<li>Michael Cooper (W3C/MIT)</li>
 			<li>James Craig (Apple Inc.) </li>
 			<li>Joanmarie Diggs (Igalia)</li>
-			<li>Fred Esch (IBM Corporation)</li>
-			<li>Steve Faulkner (The Paciello Group) </li>
-			<li>John Foliot (Invited Expert)</li>
+			<li>Steve Faulkner (The Paciello Group, LLC) </li>
+			<li>John Foliot (Deque Systems, Inc.)</li>
 			<li>Bryan Garaventa (SSB BART Group)</li>
 			<li>Matt Garrish (DAISY Consortium)</li>
-			<li>Billy Gregory (The Paciello Group)</li>
-			<li>Karl Groves (The Paciello Group)</li>
 			<li>Jon Gunderson (University of Illinois at Urbana-Champaign)</li>
 			<li>Markus Gylling (DAISY Consortium)</li>
 			<li>Markku Hakkinen (Educational Testing Service)</li>
-			<li>Katie Haritos-Shea (Knowbility)</li>
-			<li>Susann Keohane (IBM Corporation)</li>
 			<li>Matthew King (Facebook)</li>
-			<li>Jason Kiss (Department of Internal Affairs, New Zealand Government)</li>
-			<li>Jamie Knight (British Broadcasting Corporation)</li>
 			<li>JaEun Jemma Ku (University of Illinois at Urbana-Champaign)</li>
+			<li>Dominic Mazzoni (Google, Inc.)</li>
 			<li>Shane McCarron (Invited Expert, Aptest)</li>
-			<li>Charles McCathie Nevile (Yandex)</li>
-			<li>Mary Jo Mueller (IBM Corporation)</li>
 			<li>James Nurthen (Oracle Corporation) </li>
 			<li>Ian Pouncey (The Paciello Group, LLC)</li>
-			<li>Mark Sadecki (Invited Expert)</li>
 			<li>Janina Sajka (Invited Expert, The Linux Foundation)</li>
 			<li>Joseph Scheuhammer (Invited Expert, Inclusive Design Research Centre, OCAD University) </li>
-			<li>Stefan Schnabel (SAP AG) </li>
-			<li>Richard Schwerdtfeger (IBM Corporation)</li>
-			<li>Lisa Seeman (Invited Expert) </li>
+			<li>Stefan Schnabel (SAP SE) </li>
+			<li>Richard Schwerdtfeger (Knowbility)</li>
+			<li>Lisa Seeman-Kestenbaum (Invited Expert) </li>
 			<li>Tzviya Siegman (Wiley)</li>
-			<li>Cynthia Shelly (Microsoft Corporation) </li>
 			<li>Alexander Surkov (Mozilla Foundation)</li>
-			<li>Léonie Watson (The Paciello Group)</li>
+			<li>Job van Achterberg (Invited Expert)</li>
+			<li>Léonie Watson (The Paciello Group, LLC)</li>
+			<li>Evan Yamanishi (W. W. Norton)</li>
 			<li>Jason White (Educational Testing Service)</li>
-			<li>Gottfried Zimmermann (Invited Expert, Access Technologies Group)</li>
 		</ul>
   </section>
 	<section class="section" id="ack_others">
@@ -73,11 +66,14 @@
 			<li>Micah Dubinko (Invited Expert)</li>
 			<li>Mandana Eibegger</li>
 			<li>Beth Epperson (Websense)</li>
+			<li>Fred Esch (IBM Corporation)</li>
 			<li>Donald Evans (AOL)</li>
 			<li>Chris Fleizach (Apple Inc.)</li>
 			<li>Kelly Ford (Microsoft Corporation)</li>
 			<li>Geoff Freed (Invited Expert, NCAM)</li>
 			<li>Christopher Gallelo (Microsoft Corporation)</li>
+			<li>Billy Gregory (The Paciello Group, LLC)</li>
+			<li>Karl Groves (The Paciello Group, LLC)</li>
 			<li>Birkir Gunnarsson (Deque Systems, Inc.)</li>
 			<li>Kentarou Fukuda (IBM Corporation)</li>
 			<li>Bryan Garaventa</li>
@@ -91,6 +87,7 @@
 			<li>Georgios Grigoriadis (SAP AG)</li>
 			<li>Jeff Grimes (Oracle)</li>
 			<li>Loretta Guarino Reid (Google, Inc.)</li>
+			<li>Katie Haritos-Shea (Knowbility)</li>
 			<li>Barbara Hartel</li>
 			<li>James Hawkins (Google, Inc.)</li>
 			<li>Benjamin Hawkes-Lewis</li>
@@ -108,9 +105,11 @@
 			<li>Shilpi Kapoor (BarrierBreak Technologies)</li>
 			<li>Masahiko Kaneko (Microsoft Corporation)</li>
 			<li>Marjolein Katsma</li>
+			<li>Susann Keohane (IBM Corporation)</li>
 			<li>George Kerscher (International Digital Publishing Forum)</li>
-			<li>Jason Kiss (New Zealand Government)</li>
+			<li>Jason Kiss (Department of Internal Affairs, New Zealand Government)</li>
 			<li>Todd Kloots</li>
+			<li>Jamie Knight (British Broadcasting Corporation)</li>
 			<li>Johannes Koch</li>
 			<li>Gerard K. Cohen</li>
 			<li>Sam Kuper</li>
@@ -131,8 +130,9 @@
 			<li>Anders Markussen (Opera Software)</li>
 			<li>Krzysztof Maczyński </li>
 			<li>Matthew May (Adobe Systems Inc.)</li>
-			<li>Dominic Mazzoni (Google, Inc.)</li>
 			<li>Mark McCarthy</li>
+			<li>Charles McCathie Nevile (Yandex)</li>
+			<li>Mary Jo Mueller (IBM Corporation)</li>
 			<li>Alexandre Morgaut (4D)</li>
 			<li>Ann Navarro (Invited Expert)</li>
 			<li>Joshue O Connor (Invited Expert, CFIT)</li>
@@ -155,6 +155,7 @@
 			<li>Mario Sánchez Prada (Samsung Electronics Co., Ltd. and Gnome Foundation)</li>
 			<li>Martin Schaus (SAP AG)</li>
 			<li>Doug Schepers (W3C)</li>
+			<li>Cynthia Shelly (Microsoft Corporation) </li>
 			<li>Matthias Schmitt </li>
 			<li>Marc Silbey (Microsoft Corporation)</li>
 			<li>Leif Halvard Sili</li>
@@ -179,6 +180,7 @@
 			<li>Tom Wlodkowski</li>
 			<li>Sam White (Apple Inc.)</li>
 			<li>Marco Zehe (Mozilla Foundation)</li>
+			<li>Gottfried Zimmermann (Invited Expert, Access Technologies Group)</li>
 		</ul>
 	</section>
 	<section class="section" id="ack_funders">
