Grid Pattern: Editorial clarification of keyboard guidance
I received feedback that the keyboard guidance for grid implied
that the browser provided grid naivgation keys where it says:

> These key commands are available by default after an element in the grid receives focus.

Modified aria-practices.html to change it to:

> Implementations of grid make these key commands available when an element in the grid has received focus, e.g., after a user has moved focus to the grid with <kbd>Tab</kbd>.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1285,7 +1285,7 @@
           <h5>Keyboard Interaction For Data Grids</h5>
           <p>
             The following keys provide grid navigation by moving focus among cells of the grid.
-            These key commands are available by default after an element in the grid receives focus.
+            Implementations of grid make these key commands available when an element in the grid has received focus, e.g., after a user has moved focus to the grid with <kbd>Tab</kbd>.
           </p>
           <ul>
             <li>
@@ -1351,12 +1351,10 @@
 
         <section class="notoc">
           <h5>Keyboard Interaction For Layout Grids</h5>
-
           <p>
             The following keys provide grid navigation by moving focus among cells of the grid.
-            These key commands are available by default after an element in the grid receives focus.
+            Implementations of grid make these key commands available when an element in the grid has received focus, e.g., after a user has moved focus to the grid with <kbd>Tab</kbd>.
           </p>
-
           <ul>
             <li>
               <kbd>Right Arrow</kbd>: Moves focus one cell to the right.
