Menubar examples: Make mouse behaviors and parent menu item appearance change triggers more consistent with desktop conventions #408
This commit fixes the menubar-2 example.

It ensures the following behavior:
- open menus stay open on mouseout
- remove timeouts that close menu on mouseout
- close menu when user:
  - clicks outside menu
  - clicks again on menubar item
  - clicks on menu item in menu
  - types tab or shift+tab
  - types space or enter on menu item (but not for space on radio/checkbox)
  - hovers over another menubar item (other menu opens)
- menubar item retains its activated appearance while its menu is open

Details of the code changes:
- deleted hasFocus and hasHover state booleans because they are no longer needed
- added popupMenu.isOpen() which checks for aria-expanded=true on the corresponding menubar item's DOM element
- added ESC key handling on menubar items (closes menu if open)
- clicking on menubar item opens menu, clicking again on same menubar item closes it
- make sure browser doesn't scroll when clicking on menubar item (default behavior for clicking on link)
- removed focus, blur, and mouseout event handling and timeouts from menubar items
- removed focus, blur, mouseover, and mouseout event handling and timeouts from popup menu items
- added focusout on menubar item and popup menu item to close menu if focus will be going outside of the menubar
- if a menu is open, then hovering over a different menubar item opens its menu instead
- removed check for anchor element children of menubar items (was probably an artefact from a previous implementation)
- removed mouseover and mouseout events from popup menu
- removed 'force' parameter from popup menu close() function
- deleted some vars that were declared but not used, or were declared twice
- fixed a few comments that didn't quite match the code
- declared some vars as local that were declared as global (i.e. without var keyword) but did not need to be
- removed some redundant checks,

--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -439,7 +439,7 @@
             <td>
               <code>li</code>
             </td>
-            <td>Indicates the submenu is open.</td>
+            <td>Indicates the menu is open.</td>
           </tr>
           <tr>
             <td></td>
