--- a/aria-practices.html
+++ b/aria-practices.html
@@ -82,7 +82,7 @@
         Incorrect ARIA misrepresents visual experiences, with potentially devastating effects on their corresponding non-visual experiences.
       </p>
       <p>Before using ARIA or any of the guidance in this document, please take time to understand the following two essential principles.</p>
-      <h4>Principal 1: A role is a promise</h4>
+      <h4>Principle 1: A role is a promise</h4>
       <p>This code:</p>
       <pre><code>
         &lt;div role=&quot;button&quot;&gt;Place Order&lt;/div&gt;
