--- a/examples/combobox/aria1.1pattern/grid-combo.html
+++ b/examples/combobox/aria1.1pattern/grid-combo.html
@@ -10,12 +10,12 @@
 <script src="../../js/examples.js"></script>
 <script src="../../js/highlight.pack.js"></script>
 <script src="../../js/app.js"></script>
-<script src="../../js/utils.js" type="text/javascript"></script>
+<script src="../../js/utils.js"></script>
 
 <!--  js and css for this example. -->
 <link href="css/combobox-1.1.css" rel="stylesheet">
-<script src="js/grid-combobox.js" type="text/javascript"></script>
-<script src="js/grid-combo-example.js" type="text/javascript"></script>
+<script src="js/grid-combobox.js"></script>
+<script src="js/grid-combo-example.js"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -76,7 +76,6 @@
           </div>
         </div>
       </div>
-      </div>
       <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
     </section>
   
@@ -114,7 +113,7 @@
             </td>
           </tr>
           <tr>
-            <th><li>Standard single line text editing keys</th>
+            <th>Standard single line text editing keys</th>
             <td>
               <ul>
                 <li>Keys used for cursor movement and text manipulation, such as <kbd>Delete</kbd> and <kbd>Shift + Right Arrow</kbd>.</li>
@@ -243,7 +242,7 @@
               <code>combobox</code>
             </th>
             <td></td>
-            <td><code>div</</code></td>
+            <td><code>div</code></td>
             <td>
               <ul>
                 <li>Identifies the element as a combobox.</li>
@@ -346,7 +345,7 @@
         </tbody>
       </table>
       <h3 id="rps_label_popup">Grid Popup</h3>
-      <table aria-labelledby="rps_label_listbox rps_label" class="data attributes">
+      <table aria-labelledby="rps_label_popup rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -409,8 +408,8 @@
       <h2>Javascript and CSS Source Code</h2>
       <ul>
         <li> CSS: <a href="css/combobox-1.1.css" type="tex/css">combobox-1.1.css</a></li>
-        <li>Javascript: <a href="js/grid-combobox.js" type="text/javascript">grid-combobox.js</a></li>
-        <li>Javascript: <a href="js/grid-combo-example.js" type="text/javascript">grid-combo-example.js</a></li>
+        <li>Javascript: <a href="js/grid-combobox.js">grid-combobox.js</a></li>
+        <li>Javascript: <a href="js/grid-combo-example.js">grid-combo-example.js</a></li>
       </ul>
     </section>
 
