--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -10,12 +10,12 @@
 <script src="../../js/examples.js"></script>
 <script src="../../js/highlight.pack.js"></script>
 <script src="../../js/app.js"></script>
-<script src="../../js/utils.js" type="text/javascript"></script>
+<script src="../../js/utils.js"></script>
 
 <!--  js and css for this example. -->
 <link href="css/combobox-1.1.css" rel="stylesheet">
-<script src="js/listbox-combobox.js" type="text/javascript"></script>
-<script src="js/listbox-combo-example.js" type="text/javascript"></script>
+<script src="js/listbox-combobox.js"></script>
+<script src="js/listbox-combo-example.js"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -230,7 +230,7 @@
             </td>
           </tr>
           <tr>
-            <th><li>Standard single line text editing keys</th>
+            <th>Standard single line text editing keys</th>
             <td>
               <ul>
                 <li>Keys used for cursor movement and text manipulation, such as <kbd>Delete</kbd> and <kbd>Shift + Right Arrow</kbd>.</li>
@@ -347,7 +347,7 @@
               <code>combobox</code>
             </th>
             <td></td>
-            <td><code>div</</code></td>
+            <td><code>div</code></td>
             <td>
               <ul>
                 <li>Identifies the element as a combobox.</li>
@@ -526,8 +526,8 @@
       <h2>Javascript and CSS Source Code</h2>
       <ul>
         <li>CSS: <a href="css/combobox-1.1.css" type="tex/css">combobox-1.1.css</a></li>
-        <li>Javascript: <a href="js/listbox-combobox.js" type="text/javascript">listbox-combobox.js</a></li>
-        <li>Javascript: <a href="js/listbox-combo-example.js" type="text/javascript">listbox-combo-example.js</a></li>
+        <li>Javascript: <a href="js/listbox-combobox.js">listbox-combobox.js</a></li>
+        <li>Javascript: <a href="js/listbox-combo-example.js">listbox-combo-example.js</a></li>
       </ul>
     </section>
 
