A few typos on the landmarks pages #625

--- a/examples/landmarks/resources.html
+++ b/examples/landmarks/resources.html
@@ -81,7 +81,7 @@
 
                     <aside aria-labelledby="id4">
                       <h2 id="id4">Landmarks</h2>
-                      <p>The following are landmarks defined on the page:</p>
+                      <p>The following landmarks are defined on this page:</p>
                       <ul>
                         <li>Banner</li>
                         <li>Complementary</li>
