--- a/examples/landmarks/HTML5.html
+++ b/examples/landmarks/HTML5.html
@@ -44,7 +44,7 @@
         <div class="col-xs-12 col-sm-9 col-md-6 col-lg-7">
           <main>
             <h1 id="id1">HTML5 Sectioning Elements</h1>
-            <p>It is important to understand that many HTML5 sectioning (e.g. <code>main</code>,<code>nav</code>, <code>aside</code> ...) elements by default define ARIA landmarks. 
+            <p>It is important to understand that many HTML5 sectioning (e.g. <code>main</code>, <code>nav</code>, <code>aside</code> ...) elements by default define ARIA landmarks. 
               If HTML5 sectioning elements are used without understanding the associated landmark structure, assistive technology users will most likely be confused and less efficient in accessing content and interacting with web pages.
             </p>
             <table class="table table-striped table-hover" aria-label="Default landmark roles for HTML5 sectioning elements">
@@ -108,7 +108,7 @@
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
           <aside aria-labelledby="id4">
             <h2 id="id4">Landmarks</h2>
-            <p>The following are landmarks defined on the page:</p>
+            <p>The following landmarks are defined on this page:</p>
             <ul>
               <li>Banner</li>
               <li>Complementary</li>
