--- a/examples/landmarks/at.html
+++ b/examples/landmarks/at.html
@@ -177,7 +177,7 @@
                     <td>Go to previous landmark</td>
                   </tr>
                   <tr>
-                    <td>Control+Option+ U, then left or right arrow key to landmark list</td>
+                    <td>Control+Option+U, then left or right arrow key to landmark list</td>
                     <td>List of landmarks</td>
                   </tr>
                 </tbody>
@@ -188,7 +188,7 @@
             </section>
 
             <section aria-labelledby="orca">
-            <h2 id="orca">ORCA Sreen Reader for Linux/GNOME</h2>
+            <h2 id="orca">ORCA Screen Reader for Linux/GNOME</h2>
               <p>The following commands are available in ORCA Screen reader for navigating landmarks:</p>
 
               <table class="table table-striped table-hover" aria-labelledby="orca">
@@ -205,7 +205,7 @@
                     <td>Next landmark</td>
                   </tr>
                   <tr>
-                    <td>shift+M</td>
+                    <td>Shift+M</td>
                     <td>Previous landmark</td>
                   </tr>
                   <tr>
@@ -223,7 +223,7 @@
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
           <aside aria-labelledby="id4">
             <h2 id="id4">Landmarks</h2>
-            <p>The following are landmarks defined on the page:</p>
+            <p>The following landmarks are defined on this page:</p>
             <ul>
               <li>Banner</li>
               <li>Complementary</li>
