--- a/examples/landmarks/form.html
+++ b/examples/landmarks/form.html
@@ -263,7 +263,7 @@
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
           <aside aria-labelledby="id4">
             <h2 id="id4">Landmarks</h2>
-            <p>The following are landmarks defined on the page:</p>
+            <p>The following landmarks are defined on this page:</p>
             <ul>
               <li>Banner</li>
               <li>Complementary</li>
