--- a/examples/landmarks/region.html
+++ b/examples/landmarks/region.html
@@ -103,7 +103,7 @@
                   <p>Use the HTML5 <code>section</code> element to define a <code>region</code> landmark.</p>
 
                   <h3>HTML5 Example: Using <code>section[aria-labelledby]</code> attribute</h3>
-                  <p>Defines a label for each region using exsiting content on the page.</p>
+                  <p>Defines a label for each region using existing content on the page.</p>
                   <div class="code">
                     &lt;main&gt;
                     <br>
@@ -215,7 +215,7 @@
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
           <aside aria-labelledby="id4">
             <h2 id="id4">Landmarks</h2>
-            <p>The following are landmarks defined on the page:</p>
+            <p>The following landmarks are defined on this page:</p>
             <ul>
               <li>Banner</li>
               <li>Complementary</li>
