--- a/examples/landmarks/search.html
+++ b/examples/landmarks/search.html
@@ -77,7 +77,7 @@
                     &nbsp;&nbsp;&lt;input type="search" aria-label="search text" size="20"&gt;
                     <br>
                     <br>
-                    &nbsp;&nbsp;&lt;input type="submit" value="Search""&gt;
+                    &nbsp;&nbsp;&lt;input type="submit" value="Search"&gt;
                     <br>
                     <br>
                     &lt;/form&gt;
@@ -94,7 +94,7 @@
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
           <aside aria-labelledby="id4">
             <h2 id="id4">Landmarks</h2>
-            <p>The following are landmarks defined on the page:</p>
+            <p>The following landmarks are defined on this page:</p>
             <ul>
               <li>Banner</li>
               <li>Complementary</li>
