Removed since its a boolean attribute

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -372,7 +372,7 @@
         </div>
 
         <div class="ex3_pagination">
-          <button disabled="true" id="ex3_pageup_button">Previous</button>
+          <button disabled id="ex3_pageup_button">Previous</button>
           <button id="ex3_pagedown_button">Next</button>
         </div>
       </div>
