--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -10,12 +10,12 @@
 <script src="../js/examples.js"></script>
 <script src="../js/highlight.pack.js"></script>
 <script src="../js/app.js"></script>
-<script src="../js/utils.js" type="text/javascript"></script>
+<script src="../js/utils.js"></script>
 
 <!--  js and css for this example. -->
 <link href="css/layoutGrids.css" rel="stylesheet">
-<script src="js/dataGrid.js" type="text/javascript"></script>
-<script src="js/layoutGrids.js" type="text/javascript"></script>
+<script src="js/dataGrid.js"></script>
+<script src="js/layoutGrids.js"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -683,8 +683,8 @@
       </li>
       <li>JavaScript:
         <ul>
-          <li><a href="js/layoutGrids.js" type="text/javascript">layoutGrids.js</a></li>
-          <li><a href="js/dataGrid.js" type="text/javascript">dataGrid.js</a></li>
+          <li><a href="js/layoutGrids.js">layoutGrids.js</a></li>
+          <li><a href="js/dataGrid.js">dataGrid.js</a></li>
         </ul>
       </li>
     </ul>
