Re-added type on js/layoutGrids.js and js/dataGrid.js links

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -683,8 +683,8 @@
       </li>
       <li>JavaScript:
         <ul>
-          <li><a href="js/layoutGrids.js">layoutGrids.js</a></li>
-          <li><a href="js/dataGrid.js">dataGrid.js</a></li>
+          <li><a href="js/layoutGrids.js" type="text/javascript">layoutGrids.js</a></li>
+          <li><a href="js/dataGrid.js" type="text/javascript">dataGrid.js</a></li>
         </ul>
       </li>
     </ul>
