Revert the change that replaced th elements incorrectly

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -37,7 +37,7 @@
     <ul>
       <li><a href="../menu-button/menu-button-links.html">Navigation Menu Button</a>: A button that opens a menu of items that behave as links.</li>
       <li><a href="../menu-button/menu-button-actions.html">Action Menu Button Example Using <code>element.focus()</code></a>: A button that opens a menu of actions or commands where focus in the menu is managed using <code>element.focus()</code>.</li>
-      <li><a href="../menu-button/menu-button-actions-active-descendant.html">Action Menu Button Example Using <code>aria-activedescendant</code></a>: A button that opens a menu of actions or commands where focus in the menu is managed using aria-activedescendant.</li>
+      <li><a href="../menu-button/menu-button-actions-active-descendant.html">Action Menu Button Example Using <code>aria-activedescendant</code></a>: A button that opens a menu of actions or commands where focus in the menu is managed using <code>aria-activedescendant</code>.</li>
     </ul>
 
     <section>
@@ -73,11 +73,11 @@
         </thead>
         <tbody>
           <tr>
-            <td><kbd>Enter</kbd></td>
+            <th><kbd>Enter</kbd></th>
             <td>Activates the button.</td>
           </tr>
           <tr>
-            <td><kbd>Space</kbd></td>
+            <th><kbd>Space</kbd></th>
             <td>Activates the button.</td>
           </tr>
         </tbody>
