--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -10,12 +10,12 @@
 <script src="../js/examples.js"></script>
 <script src="../js/highlight.pack.js"></script>
 <script src="../js/app.js"></script>
-<script src="../js/utils.js" type="text/javascript"></script>
+<script src="../js/utils.js"></script>
 
 <!--  js and css for this example. -->
 <link href="css/layoutGrids.css" rel="stylesheet">
-<script src="js/dataGrid.js" type="text/javascript"></script>
-<script src="js/layoutGrids.js" type="text/javascript"></script>
+<script src="js/dataGrid.js"></script>
+<script src="js/layoutGrids.js"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -372,7 +372,7 @@
         </div>
 
         <div class="ex3_pagination">
-          <button disabled="true" id="ex3_pageup_button">Previous</button>
+          <button disabled id="ex3_pageup_button">Previous</button>
           <button id="ex3_pagedown_button">Next</button>
         </div>
       </div>
