Typo in grid element focus section heading #660

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1435,7 +1435,7 @@
         </ol>
 
         <section id="gridNav_focus" class="notoc">
-          <h5>Whether to Focus on a Cell Or an Element Inside IT</h5>
+          <h5>Whether to Focus on a Cell Or an Element Inside It</h5>
 
           <p>
             For assistive technology users, the quality of experience when navigating a grid heavily depends on both what a cell contains and on where keyboard focus is set.
