Typo in layout grid description #659

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1397,7 +1397,7 @@
           </ul>
           <ul class="note">
             <li>
-              When the above grid navigation keys move focus, whether the focus is sett on an element inside the cell or the grid cell depends on cell content.
+              When the above grid navigation keys move focus, whether the focus is set on an element inside the cell or the grid cell depends on cell content.
               See <a href="#gridNav_focus">Whether to Focus on a Cell or an Element Inside It</a>.
             </li>
             <li>
