Fix Typo for #682

--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -61,7 +61,7 @@
           <p>
             In order to facilitate the judgement of the eye regarding the diminution of the army, I supposed that the troops under Prince Jèrôme and under Marshal Davoust, who were sent to Minsk and Mobilow and who rejoined near Orscha and Witebsk, had always marched with the army. 
           </p>
-  <p><strong>Note: A French translation from Wikipeedia.</strong></p>
+  <p><strong>Note: A French translation from Wikipedia.</strong></p>
         <button aria-expanded="true" aria-controls="id_long_desc">Data Table for Minard's Chart</button>
         <div id="id_long_desc">
           <h3 id="id_data_label">Data for Charles Minard's Chart of Napoleon's Invasion of Russia</h3>
