--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2397,8 +2397,8 @@
               <li>
                 <kbd>Delete</kbd> (Optional): If deletion is allowed, deletes (closes) the current tab element and its associated tab panel, 
                 sets focus to the tab following the tab that was closed, and activates the newly focused tab. If there is no following tab then
-                sets focus to the previous tab to the tab that was close and activates it. If the user can close all the tabs 
-                then the application must decide where to mocve focus.
+                sets focus to the previous tab to the tab that was closed and activates it. If the user can close all the tabs 
+                then the application must decide where to move focus.
                 Alternatively, or in addition, the delete function is available in a context menu.
               </li>
             </ul>
