Add role=none to fix #572

--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -73,7 +73,7 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <li role="none">
                 <a role="menuitem" href="#" aria-haspopup="true" aria-expanded="false">Campus
                   Tours</a>
                 <ul role="menu" aria-label="Campus Tours">
