Modify HTML5 techniques section for region and form to fix #636

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3079,7 +3079,7 @@
         <section class="notoc">
           <h5>HTML5 Techniques</h5>
 
-          <p>The HTML5 <code>form</code> element that defines a <code>form</code> landmark when it has an accessible name (e.g. <code>aria-labelledby</code>, <code>aria-label</code> or <code>title</code>).</p>
+          <p>The HTML5 <code>form</code> element defines a <code>form</code> landmark when it has an accessible name (e.g. <code>aria-labelledby</code>, <code>aria-label</code> or <code>title</code>).</p>
 
           <h5>ARIA Technique</h5>
 
@@ -3171,7 +3171,7 @@
         <section class="notoc">
           <h5>HTML5 Technique</h5>
 
-          <p>Use the HTML5 <code>section</code> element to define a <code>region</code> landmark.</p>
+          <p>The HTML5 <code>section</code> element defines a <code>region</code> landmark when it has an accessible name (e.g. <code>aria-labelledby</code>, <code>aria-label</code> or <code>title</code>).</p>
 
           <h5>ARIA Technique</h5>
 
