Make proposed change in #585 to clarify radio buttons

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1990,8 +1990,10 @@
     <section class="widget" id="radiobutton">
       <h3>Radio Group</h3>
       <p>
-        A radio group is a set of checkable buttons, known as radio buttons, where only one
-        button in the set may be in a checked state.
+        A radio group is a set of checkable buttons, known as radio buttons, where no more than one of 
+        the buttons can be checked at a time.
+        Some implementations may initialize the set with all buttons in the unchecked state in order to 
+        force the user to check one of the buttons before moving past a certain point in the workflow.
       </p>
 
       <section class="notoc">
