--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -316,7 +316,7 @@
         <ul>
           <li>The larger a focusable element is, the more difficult it is to visually
             identify the location of focus, especially for users with a narrow field of view.</li>
-          <li>The dialog has a visual boarder. So creating a clear visual indicator of focus
+          <li>The dialog has a visual border, so creating a clear visual indicator of focus
             when the entire dialog has focus is not very feasible.
           <li>Screen readers read the label and content of focusable elements. The dialog
             contains its label and a lot of content! If a dialog like this one has focus, the
