target labels directly

--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -234,7 +234,7 @@
   </div>
   <div id="dialog_layer" class="dialogs">
     <div role="dialog" id="dialog1" aria-labelledby="dialog1_label" aria-modal="true" class="hidden">
-      <h2 id="dialog1_label">Add Delivery Address</h2>
+      <h2 id="dialog1_label" class="dialog_label">Add Delivery Address</h2>
       <div class="dialog_form">
         <div class="dialog_form_item">
           <label>
@@ -281,7 +281,7 @@
     <!--  Second modal to open on top of the first modal  -->
     <div id="dialog2" role="dialog" aria-labelledby="dialog2_label"
       aria-describedby="dialog2_desc" aria-modal="true" class="hidden">
-      <h2 id="dialog2_label">Verification Result</h2>
+      <h2 id="dialog2_label" class="dialog_label">Verification Result</h2>
       <div id="dialog2_desc" class="dialog_desc">
         <p tabindex="-1" id="dialog2_para1">This is just a demonstration. If it were a real application, it would
           provide a message telling whether the entered address is valid.</p>
@@ -341,7 +341,7 @@
     <!--  Dialog that replaces dialog 1.  -->
     <div id="dialog3" role="dialog" aria-labelledby="dialog3_label"
       aria-describedby="dialog3_desc" aria-modal="true" class="hidden">
-      <h2 id="dialog3_label">Address Added</h2>
+      <h2 id="dialog3_label" class="dialog_label">Address Added</h2>
       <p id="dialog3_desc" class="dialog_desc">
         The address you provided has been added to your list of delivery addresses. It is ready
         for immediate use. If you wish to remove it, you can do so from
@@ -355,7 +355,7 @@
     <div id="dialog4" role="dialog" aria-labelledby="dialog4_label"
       aria-describedby="dialog4_desc" class="hidden"
       aria-modal="true">
-      <h2 id="dialog4_label">End of the Road!</h2>
+      <h2 id="dialog4_label" class="dialog_label">End of the Road!</h2>
       <p id="dialog4_desc" class="dialog_desc">
         You activated a fake link or button that goes nowhere!
         The link or button is present for demonstration purposes only.
