--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2903,7 +2903,7 @@
       <p><strong>Step 3: Label areas</strong></p>
 
       <ul>
-        <li>If a specific landmark role is used more than once on a web page, it should have a unique label.</li>
+        <li>If a specific landmark role is used more than once on a web page, each instance of that landmark in the page should have a unique label.</li>
 
         <li>If a landmark is only used once on the page it may not require a label. See Landmark Roles section below. </li>
 
