changes on file selection input

--- a/examples/treeview/treeview-3/treeview-3a.html
+++ b/examples/treeview/treeview-3/treeview-3a.html
@@ -56,6 +56,7 @@
          <h3 id="tree_label">
             File Viewer
           </h3>
+        <div id="ex1-container">
           <ul role="tree" aria-labelledby="tree_label">
             <li role="treeitem"
               aria-expanded="false">
@@ -249,8 +250,9 @@
             </li>
           </ul>
 
-          <p><label>File or Folder Selected: <input id="last_action" type="text" size="15" readonly></label></p>
+          <p><label>Files Selected: <input id="last_action" type="text" size=" " readonly></label></p>
         </div>
+      </div>
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep start" aria-label="End of"></div>
       </section>
 
